--- a/food-network/inde.html
+++ b/food-network/inde.html
@@ -37,6 +37,64 @@
     </div>
         
     </section>
+    <section>
+        <div class="my-recipies">
+            <h1>My Recipies</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> 
+                Lorem Ipsum has been the industry's standard dummy text ever since the  <br>
+                1500s.</p>
+        </div>
+        <div class="flx">
+            <div class="group">
+                <div>
+                    <img class="img1" src="images/img1.jpg" alt="">
+                </div>
+                <h2>Recipie Title</h2>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit. Lacus, 
+                    fermentum amet faucibus sed id nisi 
+                    lectus at </p>
+            </div>
+            <div class="group">
+                <div>
+                    <img class="img1" src="images/img2.png" alt="">
+                </div>
+                <h2>Recipie Title</h2>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit. Lacus, 
+                    fermentum amet faucibus sed id nisi 
+                    lectus at </p>
+            </div>
+            <div class="group">
+                <div>
+                    <img class="img1" src="images/img3.jpg" alt="">
+                </div>
+                <h2>Recipie Title</h2>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit. Lacus, 
+                    fermentum amet faucibus sed id nisi 
+                    lectus at </p>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <br>
+
+
+
+    <footer>
+        <h1>
+            <span class="orange-color">FOOD</span> NETWORK
+        </h1>
+        <p>
+            Eat healthy to live healthy. Live healthy to live happ. 
+        </p>
+    </footer>
+
+
+
+
 
     
 </body>
