--- a/food-network/index.html
+++ b/food-network/index.html
@@ -17,7 +17,7 @@
         <div class="half-width">
             <h1><span class="orange-color">Skip</span> The Diet,<br>
             Just Eat Healthy <br>
-            With Food Network</h1>
+            With Food Network !!</h1>
         <p>You will find a lot of fun and unadulterated food on our web site. <span class="orange-color">"Eat small meals to stay healthy."</span> </p><br><br>
         <a class="button" target="blank" href="https://www.facebook.com/sakibnahid13/">Order Food</a>
         </div>
@@ -48,32 +48,23 @@
                 <div>
                     <img class="img1" src="images/img1.jpg" alt="">
                 </div>
-                <h2>Recipie Title</h2>
-                <p>Lorem ipsum dolor sit amet, 
-                    consectetur adipiscing elit. Lacus, 
-                    fermentum amet faucibus sed id nisi 
-                    lectus at </p>
+                <h2>ROOL</h2>
+                <p>A roll is a small, usually round or oblong individual loaf of bread served as a meal accompaniment. A roll can be served and eaten whole or cut transversely and dressed with filling between the two halves. </p>
             </div>
 
             <div class="group">
                 <div>
                     <img class="img1" src="images/img2.png" alt="">
                 </div>
-                <h2>Recipie Title</h2>
-                <p>Lorem ipsum dolor sit amet, 
-                    consectetur adipiscing elit. Lacus, 
-                    fermentum amet faucibus sed id nisi 
-                    lectus at </p>
+                <h2>PAYESH-KHEER</h2>
+                <p>heer or Kheeri or Payesh, Payasam or Phirni a type of pudding from the Indian subcontinent, made by boiling milk, sugar, and rice, although rice may be substituted with one of the following.</p>
             </div>
             <div class="group">
                 <div>
                     <img class="img1" src="images/img3.jpg" alt="">
                 </div>
-                <h2>Recipie Title</h2>
-                <p>Lorem ipsum dolor sit amet, 
-                    consectetur adipiscing elit. Lacus, 
-                    fermentum amet faucibus sed id nisi 
-                    lectus at </p>
+                <h2>VEGETABLES</h2>
+                <p>Vegetables are parts of plants that are consumed by humans or other animals as food. The original meaning is still commonly used and is applied to plants collectively to refer to all edible plant matter, including the flowers, fruits, stems, leaves, roots, and seeds.</p>
             </div>
         </div>
     </section>
@@ -109,6 +100,7 @@
         <p>
             Eat healthy to live healthy. Live healthy to live happ. 
         </p>
+        <p><span class="orange-color">Developed by © Najmus Sakib 2021</span></p>
        </div>
     </footer>  
 </body>
